--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
         <infinispan.version>7.2.1.Final</infinispan.version>
         <itextpdf5.version>5.5.5</itextpdf5.version>
         <java.version>1.8</java.version>
-        <jackson.version>2.6.0-rc3</jackson.version>
+        <jackson.version>2.6.1</jackson.version>
         <!-- Remove once spring-platform-bom updates to it. -->
         <javaparser.version>2.2.1</javaparser.version>
         <jawr.version>3.7</jawr.version>
@@ -213,12 +213,12 @@
         <selenium.version>2.45.0</selenium.version>
         <smartsprites.version>0.2.10</smartsprites.version>
         <slick.webjars.version>1.3.13</slick.webjars.version>
-        <sockjsclient.webjars.version>0.3.4</sockjsclient.webjars.version>
-        <spring-hateoas.version>0.17.0.RELEASE</spring-hateoas.version>
+        <sockjsclient.webjars.version>1.0.2</sockjsclient.webjars.version>
+        <spring-hateoas.version>0.19.0.RELEASE</spring-hateoas.version>
         <spring-social.version>1.1.2.RELEASE</spring-social.version>
         <!-- Remove when bom upgrades it -->
         <!--spring-session.version>1.0.1.RELEASE</spring-session.version-->
-        <spring-data-releasetrain.version>Gosling-RC1</spring-data-releasetrain.version>
+        <spring-data-releasetrain.version>Gosling-RELEASE</spring-data-releasetrain.version>
         <spring.test.htmlunit.version>1.0.0.RC1</spring.test.htmlunit.version>
         <!-- Remove when bom upgrades it -->
         <spring-loaded.version>1.2.4.RELEASE</spring-loaded.version>
@@ -843,7 +843,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven.surefire.plugin.version}</version>
 				<configuration>
-					<skip>false</skip>
+					<skipTests>false</skipTests>
 					<argLine>${surefireArgLine}</argLine>
 					<environmentVariables>
 						<env>dev</env>
@@ -913,7 +913,7 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
-							<skip>true</skip>
+							<skipTests>true</skipTests>
 						</configuration>
 					</plugin>
 				</plugins>
