--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
     </distributionManagement>
 
     <properties>
-        <amazon.aws.sdk.version>1.9.23</amazon.aws.sdk.version>
+        <amazon.aws.sdk.version>1.10.15</amazon.aws.sdk.version>
         <asciidoctor.version>1.5.3-SNAPSHOT</asciidoctor.version>
         <atmosphere.version>2.2.6</atmosphere.version>
         <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength</checkstyle.violation.ignore>
@@ -137,12 +137,13 @@
         <jackson.version>2.6.1</jackson.version>
         <!-- Remove once spring-platform-bom updates to it. -->
         <javaparser.version>2.2.1</javaparser.version>
-        <jawr.version>3.7</jawr.version>
+        <jawr.version>3.8</jawr.version>
         <jedis.version>2.7.2</jedis.version>
         <!-- remove jedis when boot updates -->
         <jetty.npn.boot.version>1.1.7.v20140316</jetty.npn.boot.version>
         <jetty.npn.api.version>1.1.0.v20120525</jetty.npn.api.version>
         <jgravatar.version>1.0</jgravatar.version>
+        <joda-time.version>2.8.2</joda-time.version>
         <jquery.webjars.version>1.11.2</jquery.webjars.version>
         <jqueryui.webjars.version>1.11.3</jqueryui.webjars.version>
         <jquerymobile.webjars.version>1.4.5</jquerymobile.webjars.version>
@@ -227,6 +228,7 @@
         <stripe.api.version>1.17.0</stripe.api.version>
         <stompwebsocket.webjars.version>2.3.4</stompwebsocket.webjars.version>
         <wagon.version>2.8</wagon.version>
+        <webjars-locator.version>0.27</webjars-locator.version>
         <wuic.version>0.5.2.RC1</wuic.version>
         <xml.apis.version>1.4.01</xml.apis.version>
         <xalan.version>2.7.2</xalan.version>
@@ -480,11 +482,38 @@
                 <groupId>net.jawr</groupId>
                 <artifactId>jawr-core</artifactId>
                 <version>${jawr.version}</version>
+                <!-- TODO remove when update to 3.9 https://java.net/jira/browse/JAWR-355 -->
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>net.jawr.extensions</groupId>
                 <artifactId>jawr-spring-extension</artifactId>
                 <version>${jawr.version}</version>
+                <!-- TODO remove when update to 3.9 https://java.net/jira/browse/JAWR-355 -->
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>webjars-locator-core</artifactId>
+                <version>${webjars-locator.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.timgroup</groupId>
