--- a/pom.xml
+++ b/pom.xml
@@ -1089,6 +1089,7 @@
 								<exclude>**/.git/**/*</exclude>
 								<exclude>**/sitemap.xml</exclude>
 								<exclude>**/*.properties</exclude>
+                                <exclude>**/.idea/**/*</exclude>
 							</excludes>
 							<licenses>
 								<license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
