--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,7 @@
         <xml.apis.version>1.4.01</xml.apis.version>
         <xalan.version>2.7.2</xalan.version>
         <zxing.version>3.2.0</zxing.version>
+        <w3c-nu-validator.version>15.6.29</w3c-nu-validator.version>
     </properties>
 
     <repositories>
