--- a/pom.xml
+++ b/pom.xml
@@ -473,6 +473,11 @@
         <artifactId>HikariCP</artifactId>
         <version>${hikaricp.version}</version>
     </dependency-->
+			<dependency>
+				<groupId>org.infinispan</groupId>
+				<artifactId>infinispan-embedded</artifactId>
+				<version>${infinispan.version}</version>
+			</dependency>
             <dependency>
                 <groupId>org.infinispan</groupId>
                 <artifactId>infinispan-jcache</artifactId>
