--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,7 @@
         <jqueryeasyzoom.webjars.version>2.2.0</jqueryeasyzoom.webjars.version>
         <jquerysoundmanager2.webjars.version>2.97a.20131201</jquerysoundmanager2.webjars.version>
         <jqueryflowplayer.webjars.version>5.4.6</jqueryflowplayer.webjars.version>
+        <handlebars.webjars.version>4.0.2</handlebars.webjars.version>
         <jsitemapgenerator.version>2.0</jsitemapgenerator.version>
         <jsoup.version>1.7.3</jsoup.version>
         <jetty.version>9.3.3.v20150827</jetty.version>
