Add proguard properties

--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,9 @@
         <nemesis.version>0.6-SNAPSHOT</nemesis.version>
         <opencmis.version>0.13.0</opencmis.version>
         <orika.version>1.4.6-SNAPSHOT</orika.version>
+        <proguard.version>5.2.1</proguard.version>
+        <proguard.maven.plugin.version>2.0.11</proguard.maven.plugin.version>
+        <proguard.maven.plugin.skip>true</proguard.maven.plugin.skip>
         <phantomjs.version>1.9.1</phantomjs.version>
         <phantonjs.maven.plugin.skip>false</phantonjs.maven.plugin.skip>
         <phantomjs.maven.plugin.version>0.7</phantomjs.maven.plugin.version>
