Add wagon-ssh-common dependency to the site plugin declaration. This jar contains the NullKnownHostProvider.

--- a/pom.xml
+++ b/pom.xml
@@ -838,6 +838,11 @@
                             <artifactId>wagon-ssh</artifactId>
                             <version>${wagon.version}</version>
                         </dependency>
+						<dependency>
+                            <groupId>org.apache.maven.wagon</groupId>
+                            <artifactId>wagon-ssh-common</artifactId>
+                            <version>${wagon.version}</version>
+                        </dependency>
                     </dependencies>
                 </plugin>
                 <!--plugin>
