--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,7 @@
         <javaparser.version>2.2.1</javaparser.version>
         <jawr.version>3.8</jawr.version>
         <jedis.version>2.7.2</jedis.version>
+        <jest.version>0.1.7</jest.version>
         <!-- remove jedis when boot updates -->
         <jgravatar.version>1.0</jgravatar.version>
         <joda-time.version>2.8.2</joda-time.version>
@@ -771,6 +772,11 @@
                 <artifactId>nemesis-platform-core</artifactId>
                 <version>${nemesis.version}</version>
             </dependency>
+			<dependency>
+				<groupId>io.searchbox</groupId>
+				<artifactId>jest</artifactId>
+				<version>${jest.version}</version>
+			</dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
@@ -877,6 +883,7 @@
                     <version>${maven.release.plugin.version}</version>
                     <configuration>
                         <releaseProfiles>apache-release</releaseProfiles>
+                        <useReleaseProfile>false</useReleaseProfile>
                         <goals>deploy</goals>
                     </configuration>
                 </plugin>
