--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>1.1.3.RELEASE</version>
+        <version>1.1.4.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -233,14 +233,13 @@
         <smartsprites.version>0.2.10</smartsprites.version>
         <slick.webjars.version>1.3.13</slick.webjars.version>
         <sockjsclient.webjars.version>1.0.2</sockjsclient.webjars.version>
-        <spring-hateoas.version>0.19.0.RELEASE</spring-hateoas.version>
-        <spring-social.version>1.1.2.RELEASE</spring-social.version>
+        <!--spring-social.version>1.1.2.RELEASE</spring-social.version-->
         <!-- Remove when bom upgrades it -->
         <!--spring-session.version>1.0.1.RELEASE</spring-session.version-->
         <spring-data-releasetrain.version>Gosling-RELEASE</spring-data-releasetrain.version>
         <spring.test.htmlunit.version>1.0.0.RC1</spring.test.htmlunit.version>
         <!-- Remove when bom upgrades it -->
-        <spring-loaded.version>1.2.4.RELEASE</spring-loaded.version>
+        <!--spring-loaded.version>1.2.4.RELEASE</spring-loaded.version-->
         <spring-restdocs.version>1.0.0.M1</spring-restdocs.version>
         <supercsv.version>2.3.1</supercsv.version>
         <stripe.api.version>1.17.0</stripe.api.version>
