--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>1.1.4.RELEASE</version>
+        <version>1.1.3.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -120,7 +120,7 @@
     </distributionManagement>
 
     <properties>
-        <amazon.aws.sdk.version>1.10.15</amazon.aws.sdk.version>
+        <amazon.aws.sdk.version>1.10.27</amazon.aws.sdk.version>
         <asciidoctor.version>1.5.3-SNAPSHOT</asciidoctor.version>
         <atmosphere.version>2.2.6</atmosphere.version>
         <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength</checkstyle.violation.ignore>
@@ -130,17 +130,17 @@
         <commons.vfs2.version>2.1.1660580.2</commons.vfs2.version>
         <commons.vfs2.s3.version>2.3.3</commons.vfs2.s3.version>
         <commons.jcs.version>2.0-beta-1</commons.jcs.version>
-        <drools.version>6.2.0.Final</drools.version>
+        <drools.version>6.3.0.Final</drools.version>
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
         <extjs.webjars.version>5.2.0-SNAPSHOT</extjs.webjars.version>
-        <geotools.version>12-beta</geotools.version>
+        <geotools.version>14.0</geotools.version>
         <google.concurrentlinkedhashmap.version>1.4.2</google.concurrentlinkedhashmap.version>
         <google.geocoder.version>0.16</google.geocoder.version>
-        <gridgain.version>6.6.4</gridgain.version>
-        <hibernate.version>5.0.0.Final</hibernate.version>
+        <gridgain.version>6.6.8</gridgain.version>
+        <hibernate.version>5.0.2.Final</hibernate.version>
         <!-- Upgrade once jackson-datatype-hibernate5 is out and also hazelcast supports hibernate5-->  <!-- Remove once boot updates -->
-        <hazelcast.version>3.5</hazelcast.version>
-        <hikaricp.version>2.3.7</hikaricp.version>
+        <hazelcast.version>3.5.3</hazelcast.version>
+        <hikaricp.version>2.4.1</hikaricp.version>
         <infinispan.version>7.2.1.Final</infinispan.version>
         <itextpdf5.version>5.5.5</itextpdf5.version>
         <java.version>1.8</java.version>
@@ -148,23 +148,23 @@
         <!-- Remove once spring-platform-bom updates to it. -->
         <javaparser.version>2.2.1</javaparser.version>
         <jawr.version>3.8</jawr.version>
-        <jedis.version>2.7.2</jedis.version>
+        <jedis.version>2.7.3</jedis.version>
         <jest.version>0.1.7</jest.version>
         <!-- remove jedis when boot updates -->
         <jgravatar.version>1.0</jgravatar.version>
         <joda-time.version>2.8.2</joda-time.version>
         <jquery.webjars.version>1.11.2</jquery.webjars.version>
-        <jqueryui.webjars.version>1.11.3</jqueryui.webjars.version>
+        <jqueryui.webjars.version>1.11.4</jqueryui.webjars.version>
         <jquerymobile.webjars.version>1.4.5</jquerymobile.webjars.version>
         <jquerymobile.spinbox.webjars.version>1.4.4</jquerymobile.spinbox.webjars.version>
         <jquerymobile.autocomplete.webjars.version>1.5.2-1</jquerymobile.autocomplete.webjars.version>
-        <fontawesome.webjars.version>4.3.0</fontawesome.webjars.version>
+        <fontawesome.webjars.version>4.4.0</fontawesome.webjars.version>
         <jquerycycle2.webjars.version>2.1.0</jquerycycle2.webjars.version>
         <jqueryatmosphere.webjars.version>2.2.3</jqueryatmosphere.webjars.version>
         <jqueryform.webjars.version>3.51</jqueryform.webjars.version>
         <jquerycookiecuttr.version>4dc24d9628</jquerycookiecuttr.version>
         <jquerycookie.version>1.4.0</jquerycookie.version>
-        <jquerycolorbox.webjars.version>1.4.33</jquerycolorbox.webjars.version>
+        <jquerycolorbox.webjars.version>1.6.3</jquerycolorbox.webjars.version>
         <jquerypassy.webjars.version>1.0</jquerypassy.webjars.version>
         <jquerypayment.webjars.version>1.1.4</jquerypayment.webjars.version>
         <jqueryjcarousel.webjars.version>0.3.1</jqueryjcarousel.webjars.version>
@@ -175,11 +175,11 @@
         <jquerysoundmanager2.webjars.version>2.97a.20131201</jquerysoundmanager2.webjars.version>
         <jqueryflowplayer.webjars.version>5.4.6</jqueryflowplayer.webjars.version>
         <handlebars.webjars.version>4.0.2</handlebars.webjars.version>
-        <jsitemapgenerator.version>2.0</jsitemapgenerator.version>
-        <jsoup.version>1.7.3</jsoup.version>
-        <jetty.version>9.3.3.v20150827</jetty.version>
+        <jsitemapgenerator.version>2.1</jsitemapgenerator.version>
+        <jsoup.version>1.8.3</jsoup.version>
+        <jetty.version>9.3.5.v20151012</jetty.version>
         <!-- Remove log4j2.version once spring-platform-bom updates to it. -->
-        <log4j2.version>2.3</log4j2.version>
+        <log4j2.version>2.4.1</log4j2.version>
         <maven.archetype.plugin.version>2.4</maven.archetype.plugin.version>
         <maven.war.plugin.version>2.4</maven.war.plugin.version>
         <maven.surefire.plugin.version>2.18</maven.surefire.plugin.version>
@@ -230,9 +230,10 @@
         <reflections.version>0.9.10</reflections.version>
         <redis.embedded.version>0.6</redis.embedded.version>
         <selenium.version>2.45.0</selenium.version>
-        <smartsprites.version>0.2.10</smartsprites.version>
-        <slick.webjars.version>1.3.13</slick.webjars.version>
-        <sockjsclient.webjars.version>1.0.2</sockjsclient.webjars.version>
+        <smartsprites.version>0.2.11</smartsprites.version>
+        <slick.webjars.version>1.5.0</slick.webjars.version>
+        <sockjsclient.webjars.version>1.0.3</sockjsclient.webjars.version>
+        <spring-hateoas.version>0.19.0.RELEASE</spring-hateoas.version>
         <!--spring-social.version>1.1.2.RELEASE</spring-social.version-->
         <!-- Remove when bom upgrades it -->
         <!--spring-session.version>1.0.1.RELEASE</spring-session.version-->
@@ -242,15 +243,15 @@
         <!--spring-loaded.version>1.2.4.RELEASE</spring-loaded.version-->
         <spring-restdocs.version>1.0.0.M1</spring-restdocs.version>
         <supercsv.version>2.3.1</supercsv.version>
-        <stripe.api.version>1.17.0</stripe.api.version>
+        <stripe.api.version>1.37.1</stripe.api.version>
         <stompwebsocket.webjars.version>2.3.4</stompwebsocket.webjars.version>
         <thymeleaf-jawr.version>1.1.1</thymeleaf-jawr.version>
         <wagon.version>2.8</wagon.version>
-        <webjars-locator.version>0.27</webjars-locator.version>
+        <webjars-locator.version>0.28</webjars-locator.version>
         <wuic.version>0.5.2.RC1</wuic.version>
-        <xml.apis.version>1.4.01</xml.apis.version>
+        <xml.apis.version>2.0.2</xml.apis.version>
         <xalan.version>2.7.2</xalan.version>
-        <zxing.version>3.2.0</zxing.version>
+        <zxing.version>3.2.1</zxing.version>
         <w3c-nu-validator.version>15.6.29</w3c-nu-validator.version>
     </properties>
 
@@ -719,7 +720,7 @@
                 <artifactId>stripe-java</artifactId>
                 <version>${stripe.api.version}</version>
             </dependency>
-            <dependency>
+            <!--dependency>
                 <groupId>com.github.wuic.extensions</groupId>
                 <artifactId>wuic-spring</artifactId>
                 <version>${wuic.version}</version>
@@ -728,7 +729,7 @@
                 <groupId>com.github.wuic</groupId>
                 <artifactId>wuic-tag</artifactId>
                 <version>${wuic.version}</version>
-            </dependency>
+            </dependency-->
             <dependency>
                 <groupId>xml-apis</groupId>
                 <artifactId>xml-apis</artifactId>
