--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>1.1.3.RELEASE</version>
+        <version>1.1.4.RELEASE</version>
         <relativePath />
     </parent>
 
@@ -245,6 +245,7 @@
         <supercsv.version>2.3.1</supercsv.version>
         <stripe.api.version>1.37.1</stripe.api.version>
         <stompwebsocket.webjars.version>2.3.4</stompwebsocket.webjars.version>
+        <tomcat.version>8.0.28</tomcat.version>
         <thymeleaf-jawr.version>1.1.1</thymeleaf-jawr.version>
         <wagon.version>2.8</wagon.version>
         <webjars-locator.version>0.28</webjars-locator.version>
