--- a/pom.xml
+++ b/pom.xml
@@ -238,7 +238,7 @@
         <!-- Remove when bom upgrades it -->
         <!--spring-session.version>1.0.1.RELEASE</spring-session.version-->
         <spring-data-releasetrain.version>Gosling-RELEASE</spring-data-releasetrain.version>
-        <spring.test.htmlunit.version>1.0.0.RC1</spring.test.htmlunit.version>
+        <spring.test.htmlunit.version>1.0.0.RC1</spring.test.htmlunit.version><!-- test-htmlunit was merged into spring-core 4.2 -->
         <!-- Remove when bom upgrades it -->
         <!--spring-loaded.version>1.2.4.RELEASE</spring-loaded.version-->
         <spring-restdocs.version>1.0.0.M1</spring-restdocs.version>
@@ -250,7 +250,7 @@
         <wagon.version>2.8</wagon.version>
         <webjars-locator.version>0.28</webjars-locator.version>
         <wuic.version>0.5.2.RC1</wuic.version>
-        <xml.apis.version>2.0.2</xml.apis.version>
+        <xml.apis.version>1.3.04</xml.apis.version> <!-- xml-apis has latest version of 1.3.04 - do not UPDATE -->
         <xalan.version>2.7.2</xalan.version>
         <zxing.version>3.2.1</zxing.version>
         <w3c-nu-validator.version>15.6.29</w3c-nu-validator.version>
