--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
         <commons.jcs.version>2.0-beta-1</commons.jcs.version>
         <drools.version>6.3.0.Final</drools.version>
         <ehcache.jcache.version>1.0.1</ehcache.jcache.version>
-        <extjs.webjars.version>5.2.0-SNAPSHOT</extjs.webjars.version>
+        <extjs.webjars.version>5.1.1-light</extjs.webjars.version>
         <geotools.version>14.0</geotools.version>
         <google.concurrentlinkedhashmap.version>1.4.2</google.concurrentlinkedhashmap.version>
         <google.geocoder.version>0.16</google.geocoder.version>
